--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -1,4 +1,4 @@
-<Project>
+﻿<?xml version="1.0" encoding="utf-8"?><Project>
   <PropertyGroup>
     <Company>DynamicHands B.V.</Company>
     <Copyright>Copyright Remy van Duijkeren</Copyright>
@@ -10,9 +10,9 @@
     <PackageLicenseUrl>https://github.com/remyvd/NodaMoney/blob/master/LICENSE.txt</PackageLicenseUrl>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/remyvd/NodaMoney</RepositoryUrl>
-    <Version>1.0.1-netcorewithproj0007</Version>
+    <Version>1.0.1-cake-build0009</Version>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.1.0</FileVersion>
-    <InformationalVersion>1.0.1-netcorewithproj.7</InformationalVersion>
+    <InformationalVersion>1.0.1-cake-build.9</InformationalVersion>
   </PropertyGroup>
 </Project>
