Update cake build script

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ nuget:
   disable_publish_on_pr: true
  
 build_script:
-  - ps: .\build.ps1 #-Target "AppVeyor"
+  - ps: .\build.ps1 -Target "AppVeyor"
  
 test: off
 
@@ -35,9 +35,6 @@ test: off
 artifacts:
 - path: .\Artifacts\*.nupkg
   name: nuget
-- path: .\Artifacts\*.zip
-  name: zip
-
 
 #---------------------------------#
 #     deployment configuration    #
@@ -47,19 +44,11 @@ deploy:
   release: $(APPVEYOR_REPO_TAG_NAME)
   auth_token:
     secure: y4qyCzCMLVH/DEwqh0WpXYryveAR7kuSSe25yd3PlLJms3dw7rB2gJpYc7HKW37y
-  artifact: nuget, zip
+  artifact: nuget
   draft: true
   on:
     branch: master
     appveyor_repo_tag: true
-
-- provider: NuGet
-  server: https://www.nuget.org/
-  api_key:
-    secure: cJV4lINlVi8J4NOZBAS5GnaaugKWWO0Zi5jCSKfkDOgs5mEpPDjIf9K0D8hB4bTU
-  skip_symbols: true
-  on:
-    branch: master
 
 #---------------------------------#
 #         notifications           #
