Change ContinuousDeployment  to ContinuousDelivery , Added Coverage again

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,5 +1,4 @@
-mode: ContinuousDeployment
-continuous-delivery-fallback-tag: rc
+mode: ContinuousDelivery
 next-version: 1.0.0
 branches: {}
 ignore:
