--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@
 #      general configuration      #
 #---------------------------------#
 version: '{build}-{branch}'
-image: Visual Studio 2017
+image: Visual Studio 2017 Preview
 branches:
   except:
     - gh-pages
