--- a/.editorconfig
+++ b/.editorconfig
@@ -130,6 +130,9 @@ csharp_space_between_method_declaration_parameter_list_parentheses = false
 csharp_space_between_parentheses = false
 csharp_space_between_square_brackets = false
 
+# SA1309: Field names should not begin with underscore
+dotnet_diagnostic.SA1309.severity = none
+
 [*.{asm,inc}]
 indent_size = 8
 
