Enabled Azure Pipelines build

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,6 +1,6 @@
 next-version: 1.0
 assembly-versioning-scheme: MajorMinor
-assembly-file-versioning-format: '{Major}.{Minor}.{Patch}.{env:APPVEYOR_BUILD_NUMBER ?? 0}'
+assembly-file-versioning-format: '{Major}.{Minor}.{Patch}.{env:BUILD_BUILDNUMBER ?? 0}'
 mode: ContinuousDelivery
 branches: {}
 ignore:
