--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,10 +30,25 @@ stages:
     pool:
       vmImage: 'windows-latest'
     jobs:
-      - job: Publish
-        displayName: '🚚 Publish'
+      - job: Test
+        displayName: '🚦 Test'
         dependsOn: [  ]
         steps:
           - task: CmdLine@2
             inputs:
-              script: './build.cmd Publish'
+              script: './build.cmd Restore Compile CoverageCoveralls Coverage Restore Compile Test --skip'
+          - task: PublishBuildArtifacts@1
+            inputs:
+              artifactName: TestResults
+              pathtoPublish: 'artifacts/TestResults'
+      - job: Pack
+        displayName: '📦 Pack'
+        dependsOn: [  ]
+        steps:
+          - task: CmdLine@2
+            inputs:
+              script: './build.cmd Restore Compile Pack --skip'
+          - task: PublishBuildArtifacts@1
+            inputs:
+              artifactName: artifacts
+              pathtoPublish: 'artifacts'
