--- a/src/NodaMoney.Serialization.AspNet/NodaMoney.Serialization.AspNet.csproj
+++ b/src/NodaMoney.Serialization.AspNet/NodaMoney.Serialization.AspNet.csproj
@@ -7,18 +7,12 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageId>NodaMoney.Serialization.AspNet</PackageId>
     <PackageTags>Noda;Money;Currency;ExchangeRate;Serialization</PackageTags>   
-    <TargetFrameworks>net40;net45</TargetFrameworks>   
+    <TargetFrameworks>net45</TargetFrameworks>   
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NodaMoney\NodaMoney.csproj" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
-    <Reference Include="System.Web.Extensions" />
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
